<resources>
    <string name="app_name">EJSC Jember</string>
    <string name="daftar">Daftar</string>
    <string name="mulai">Mulai</string>
    <string name="skip">Skip</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_booking">Booking</string>
    <string name="title_event">Event</string>
    <string name="title_akun">Akun</string>
    <string name="logo_ejsc">Logo EJSC</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="nik">NIK</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="alamat">Alamat</string>
    <string name="komunitas">Komunitas</string>
    <string name="pilih_komunitas">Pilih Komunitas</string>
    <string name="submit">Submit</string>
    <string name="kode_reset_kata_sandi">Kode Reset Kata Sandi</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="blank">-</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="selamat_datang2">Selamat Datang</string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="event">Event</string>
    <string name="judul_event">Judul Event</string>
    <string name="keterangan_event">Keterangan Event</string>
    <string name="tanggal_event">Tanggal Event</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="tanggal_notifikasi">Tanggal Notifikasi</string>
    <string name="judul_notifikasi">Judul Notifikasi</string>
    <string name="keterangan_notifikasi">Keterangan Notifikasi</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="versi_aplikasi">Versi Aplikasi:</string>
    <string name="keluar">Keluar</string>
    <string name="_1_0">1.0</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="optional">Buat Kata Sandi Baru (Optional)</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="poster_event">Poster Event</string>
    <string name="diselenggarakan_oleh">Diselenggarakan Oleh:</string>
    <string name="waktu_pelaksanaan">Waktu Pelaksanaan:</string>
    <string name="event_telah_selesai">Event Telah Selesai</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="upload_foto_ktp">Upload Foto KTP</string>
    <string name="event_terbaru">Event Terbaru</string>
    <string name="tampilkan_semua">Tampilkan Semua</string>
    <string name="ruangan">Ruangan</string>
    <string name="kapasitas">Kapasitas:</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="tanggal">Tanggal</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="durasi">Durasi</string>
    <string name="nama">Nama</string>
    <string name="jumlah_peserta">Jumlah Peserta</string>
    <string name="tujuan_kegiatan">Tujuan Kegiatan</string>
    <string name="deskripsi_kegiatan">Deskripsi Kegiatan</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="detail_booking">Detail Booking</string>
    <string name="pemesan">Pemesan:</string>
    <string name="ruangan2">Ruangan:</string>
    <string name="nama_ruangan">Nama Ruangan</string>
    <string name="kegiatan">Kegiatan:</string>
    <string name="ket_booking">Ket. Booking</string>
    <string name="status">Status:</string>
    <string name="komunitas2">Komunitas:</string>
    <string name="riwayat">Riwayat</string>
    <string name="aktif">Aktif</string>
    <string name="nama_komunitas">Nama Komunitas</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="mohon_masukkan_email_anda">Mohon masukkan email Anda</string>
    <string name="mohon_masukkan_kode_reset_kata_sandi">Mohon masukkan kode reset kata sandi</string>
    <string name="buat_kata_sandi_baru">Buat Kata Sandi Baru</string>
    <string name="mohon_masukkan_kata_sandi_baru_anda">Mohon masukkan kata sandi baru Anda</string>
    <string name="mohon_upload_foto_ktp_anda">Mohon upload foto ktp Anda</string>
    <string name="riwayat_booking">Riwayat Booking</string>
    <string name="detail">Detail</string>
    <string name="orang">Orang</string>
    <string name="foto_ruangan">Foto Ruangan</string>
    <string name="detail_ruangan">Detail Ruangan</string>
    <string name="booking_ruangan">Booking Ruangan</string>
    <string name="jam">jam</string>
    <string name="booking_sekarang">Booking Sekarang</string>
    <string name="form_booking">Formulir Booking</string>
    <string name="dash">-</string>
    <string name="jadwal_booking_ruangan">Jadwal Booking Ruangan:</string>
    <string name="akun">Akun</string>
    <string name="detail_event">Detail Event</string>
</resources>
