<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".akun.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logoOptimaUKM"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo_ejsc"
            android:src="@drawable/logo_ejsc_jember" />

        <TextView
            android:id="@+id/txt_selamat_datang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoOptimaUKM"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/selamat_datang_kembali"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_selamat_datang"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_regular"
            android:fontFeatureSettings="14sp"
            android:text="@string/masuk_untuk_melanjutkan"
            android:textColor="#757575" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_masuk"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_kata_sandi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnLupaPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/lupa_kata_sandi"
            android:textColor="@color/lightGrey"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonMasuk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_below="@id/btnLupaPassword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_button1"
            android:elevation="0dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/masuk"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvBelumPunyaAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonMasuk"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/belum_memiliki_akun"
            android:textColor="@color/lightGrey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnDaftarSekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBelumPunyaAkun"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/daftar_sekarang"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

    </RelativeLayout>

</ScrollView>