<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".botnav.booking.DetailBooking">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/detail_booking"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar4"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:text="@string/tanggal"
                android:textColor="@android:color/black"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mulai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:text="@string/jam_mulai"
                android:textColor="@android:color/black"
                android:textSize="12dp"
                app:layout_constraintStart_toEndOf="@+id/tanggal"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/garis"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/lightGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.135"
                tools:layout_editor_absoluteX="21dp" />

            <TextView
                android:id="@+id/pemesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/garis"
                android:text="@string/pemesan"
                android:textColor="@android:color/black"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/namapemesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/pemesan"
                android:text="@string/nama_lengkap"
                android:textColor="@color/darkGrey"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/komunitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/namapemesan"
                android:text="@string/komunitas"
                android:textColor="@color/darkGrey"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/ruangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/komunitas"
                android:text="@string/ruangan2"
                android:textColor="@android:color/black"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/namaruang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/ruangan"
                android:textColor="@color/darkGrey"
                android:textSize="14dp"
                android:text="@string/nama_ruangan"/>

            <TextView
                android:id="@+id/jmlPes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@+id/namaruang"
                android:text="@string/komunitas"
                android:textColor="@color/darkGrey"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/jmlPes"
                android:text="@string/kegiatan"
                android:textColor="@android:color/black"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/desKegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/kegiatan"
                android:textColor="@color/darkGrey"
                android:textSize="14dp"
                tools:text="@tools:sample/lorem"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>